[package]
name = "rpg"
version = "0.1.0"
# parto dal libro tutoria giochi roguelike
authors = ["Edoardo Bompiani"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rltk = { version="0.8.1" }
specs = "0.17.0"
specs-derive = "0.4.1"
serde = {version="1.0.131", features=["derive"]}
serde_json = "1.0.73"
